almost fixed issue with non-responsive translator-page (image is too wide upon resizing)

--- a/src/app/components/translator-page/translator-page.component.css
+++ b/src/app/components/translator-page/translator-page.component.css
@@ -1,17 +1,25 @@
 #profile-image {
-    width: 400px;
-    height: 400px;
-    border-radius: 10px;
-    border: 3px dashed white;
+  
 }
 
 #profile-name {
-    text-decoration: underline solid white;
-    display: inline-block;
+   text-align: center;
+   text-shadow: 1px 1px 2px white;
+   font-size: 3.5rem;
+}
+
+#profile-description {
+    text-align: center;
+    text-shadow: 1px 1px 2px gray;
+}
+
+.language-section {
+    margin: 0 auto;
 }
 
 #image-from {
     width: 70px;
+    max-width: 100%;
     height: 50px;
     box-shadow: 2px 2px 5px black;
 }
@@ -23,14 +31,21 @@
 
 #image-to {
     width: 70px;
+    max-width: 100%;
     height: 50px;
-    margin-left: 10px;
-    box-shadow: 2px 2px 2px black;
+    box-shadow: 2px 2px 5px black;
 }
 
 #profile-phone {
     font-size: 15px;
     margin-left: 10px;
+}
+
+#request-button {
+    margin: 0px 20px;
+    padding: 30px;
+    box-shadow: 2px 2px 3px black;
+    text-shadow: 1px 1px 1px gray;
 }
 
 #profile-email {
@@ -39,6 +54,53 @@
     font-size: 20px;
 }
 
+#profile-price {
+    text-align: center;
+    font-size: 3rem;
+    color: darkgreen;
+    text-shadow: 1px 1px 2px white;
+}
+
 .send-request {
     width: 400px;
+    
 }
+
+.big-profile {
+    display: none;
+}
+
+/* Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) {}
+
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+    .small-profile {
+        display: none;
+    }
+
+    .big-profile {
+        display: block;
+    }
+
+    .media .display-2 {
+        font-size: 3rem;
+    }
+    
+    .media .lead {
+        font-size: 1.1rem;
+    }
+
+    .media .profile-image {
+        min-height: 100%;
+        height: 380px;
+        width: auto;
+    }
+    
+}
+
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) {}
+
+/* Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {}
